--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.toin.glp"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -86,8 +86,6 @@ dependencies {
     //okhttp
     compile 'com.squareup.okhttp:okhttp:2.6.0'
     compile 'com.squareup.okio:okio:1.6.0'
-    //图片加载工具
-    compile 'com.squareup.picasso:picasso:2.4.0'
     //轻量级输入校验库
     compile 'com.github.yoojia:fire-eye:2.2@aar'
     compile files('libs/mta-sdk-1.6.2.jar')
@@ -109,4 +107,5 @@ dependencies {
     compile 'com.android.support:design:23.0.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'cn.bingoogolapple:bga-banner:2.0.4@aar'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
 }
