--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
     <application
         android:name="com.toin.glp.App"
         android:allowBackup="true"
-        android:icon="@mipmap/logo1"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
